--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -4,30 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Образовательный портал</title>
-    <style>
-    body, html {
-        height: 100%;
-        margin: 0;
-    }
-    .bg-img {
-        /* Путь к вашему фоновому изображению */
-        background-image: url('background.jpg');
-        height: 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-        font-family: Arial, sans-serif;
-    }
-    .title {
-        color: #ffffff;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 50px;
-    }
-</style>
+    <link rel = "stylesheet" href = "stylesheet.css">
 </head>
 <body>
 <div class="bg-img">
