--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div class="bg-img">
+    <a href="/form">Добавить клиента</a>
+    <a href="/session">Посмотреть сессии</a>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
 </body>
