--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 <div class="bg-img">
-    <a href="/form">Добавить клиента</a>
-    <a href="/session">Посмотреть сессии</a>
+    <nav class="topnav">
+        <a href="/">Главная</a>
+        <a href="#">Учебные материалы</a>
+        <a href="#">Админстратор</a>
+    </nav>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
 </body>
