--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -10,8 +10,8 @@
 <div class="bg-img">
     <nav class="topnav">
         <a href="/">Главная</a>
-        <a href="#">Учебные материалы</a>
-        <a href="#">Админстратор</a>
+        <a href="/materials">Учебные материалы</a>
+        <a href="/admin_page">Администратор</a>
     </nav>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
