--- a/src/main/resources/templates/materials.html
+++ b/src/main/resources/templates/materials.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Учебные материалы</title>
+    <link ref = "stylesheet" href = "css/bootstrap_styles.css">
 </head>
 <body>
-
+    
 </body>
 </html>
