--- a/src/main/resources/templates/materials.html
+++ b/src/main/resources/templates/materials.html
@@ -6,6 +6,27 @@
     <link ref = "stylesheet" href = "css/bootstrap_styles.css">
 </head>
 <body>
-
+<div class="container">
+    <h1>Список учебных материалов</h1>
+    <span th:if="${materials.size() == 0}">Список материалов пустой</span>
+    <table th:if="${materials.size() > 0}" class="table table-hover">
+        <thead class="thead-dark">
+        <tr>
+            <td>ID</td>
+            <td>Имя</td>
+            <td>Фамилия</td>
+            <td></td>
+            <td></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="material : ${materials}">
+            <td th:text="${material.id}"/>
+            <td th:text="${material.name}"/>
+            <td><a class="btn btn-secondary" th:href="@{'/details/' + ${material.id}}">Выбрать</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
