--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Страница администратора</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Образовательный портал</title>
+    <link type="text/css" rel ="stylesheet" th:href="@{css/stylesheet.css}">
 </head>
 <body>
-
+<div class="bg-img">
+    <nav class="topnav">
+        <a href="/">Студенты</a>
+        <a href="/">Учебные материалы</a>
+        <a href="/">Администратор</a>
+    </nav>
+    <div class="title">Белорецкий педагогический колледж</div>
+</div>
 </body>
 </html>
