--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -10,8 +10,9 @@
 <div class="bg-img">
     <nav class="topnav">
         <a href="/">Студенты</a>
+        <a href="/">Добавить студента</a>
         <a href="/">Учебные материалы</a>
-        <a href="/">Администратор</a>
+        <a href="/">Добавить материал</a>
     </nav>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
