--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -11,7 +11,7 @@
     <nav class="topnav">
         <a href="/">Главная</a>
         <a href="/materials">Учебные материалы</a>
-        <a href="/admin_page">Администратор</a>
+        <a href="/admins_page">Администратор</a>
     </nav>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
