--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -9,7 +9,7 @@
 <body>
 <div class="bg-img">
     <nav class="topnav">
-        <a href="/">Студенты</a>
+        <a href="/students">Студенты</a>
         <a href="/">Добавить студента</a>
         <a href="/">Учебные материалы</a>
         <a href="/">Добавить материал</a>
