--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -10,9 +10,10 @@
 <div class="bg-img">
     <nav class="topnav">
         <a href="/students">Студенты</a>
-        <a href="/">Добавить студента</a>
+        <a href="/students/add">Добавить студента</a>
         <a href="/">Учебные материалы</a>
         <a href="/">Добавить материал</a>
+        <a href="/">Добавить администратора</a>
     </nav>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
