--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -11,7 +11,7 @@
     <nav class="topnav">
         <a href="/students">Студенты</a>
         <a href="/students/add">Добавить студента</a>
-        <a href="/">Учебные материалы</a>
+        <a href="/materials_for_admins">Учебные материалы</a>
         <a href="/">Добавить материал</a>
         <a href="/">Добавить администратора</a>
     </nav>
