--- a/src/main/resources/templates/add_admin.html
+++ b/src/main/resources/templates/add_admin.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Добавить администратора</title>
+    <!-- Подключение Bootstrap CSS через CDN -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div class="container mt-5">
+    <h2>Форма ввода данных</h2>
+    <!-- Форма с использованием Thymeleaf -->
+    <form th:action="@{/admins_page/add/admin}" method="post">
+        <div class="form-group">
+            <label for="nameField">Фамилия</label>
+            <!-- Связывание поля ввода с полем name в модели данных на сервере -->
+            <input type="text" class="form-control" id="nameField" th:field="*{surname}" placeholder="Введите фамилию">
+        </div>
+        <div class="form-group">
+            <label for="emailField">Email</label>
+            <input type="email" class="form-control" id="emailField" th:field="*{email}" placeholder="Введите ваш email">
+        </div>
+        <div class="form-group">
+            <label for="messageField">Сообщение</label>
+            <textarea class="form-control" id="messageField" th:field="*{message}" rows="3" placeholder="Введите ваше сообщение"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Отправить</button>
+    </form>
+</div>
 
+<!-- Подключение Bootstrap JS и зависимостей через CDN -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
