--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -12,8 +12,8 @@
         <a href="/students">Студенты</a>
         <a href="/students/add">Добавить студента</a>
         <a href="/materials_for_admins">Учебные материалы</a>
-        <a href="/">Добавить материал</a>
-        <a href="/">Добавить администратора</a>
+        <a href="/materials_for_admins/add">Добавить материал</a>
+        <a href="/admins_page/add">Добавить администратора</a>
     </nav>
     <div class="title">Белорецкий педагогический колледж</div>
 </div>
