--- a/src/main/resources/templates/add_admin.html
+++ b/src/main/resources/templates/add_admin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2>Форма ввода данных</h2>
+    <h2>Добавьте нового администратора</h2>
     <!-- Форма с использованием Thymeleaf -->
     <form th:action="@{/admins_page/add}" th:object="${admins}" method="post">
         <div class="form-group">
