--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -10,7 +10,7 @@
 <div class="bg-img">
     <nav class="topnav">
         <a href="/students">Студенты</a>
-        <a href="/students/add">Добавить студента</a>
+        <a href="/admins_page/student/add">Добавить студента</a>
         <a href="/materials_for_admins">Учебные материалы</a>
         <a href="/materials_for_admins/add">Добавить материал</a>
         <a href="/admins_page/add">Добавить администратора</a>
