--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -9,6 +9,7 @@
 <body>
 <div class="bg-img">
     <nav class="topnav">
+        <a href="/">Главная</a>
         <a href="/students">Студенты</a>
         <a href="/admins_page/student/add">Добавить студента</a>
         <a href="/materials_for_admins">Учебные материалы</a>
