--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Студенты</title>
-    <link type="text/css" rel ="stylesheet" th:href="@{css/bootstrap_styles.css}">
+    <!-- <link type="text/css" rel ="stylesheet" th:href="@{css/bootstrap_styles.css}"> -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
