--- a/src/main/resources/templates/add_material.html
+++ b/src/main/resources/templates/add_material.html
@@ -9,13 +9,13 @@
 <body>
 <div class="container mt-5">
     <h2>Добавьте новый учебный материал</h2>
-    <form th:action="@{/materials_for_admins/add}" th:object="${materials}" method="post">
+    <form th:action="@{/materials_for_admins/add}" th:object="${materials}" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="material_nameField">Наименование материала</label>
             <input type="text" class="form-control" id="material_nameField" th:field="*{material_name}" placeholder="Введите имя файла">
         </div>
         <div class="form-group">
-            <label for="pdf_fileField">Файл pdf</label>
+            <label for="pdf_fileField">Файл PDF</label>
             <input type="file" class="form-control" id="pdf_fileField" th:field="*{pdf_file}" accept="application/pdf" placeholder="Выберите файл">
         </div>
         <button type="submit" class="btn btn-primary">Отправить</button>
