--- a/src/main/resources/templates/add_student.html
+++ b/src/main/resources/templates/add_student.html
@@ -25,7 +25,7 @@
             <input type="text" class="form-control" id="patronymicField" th:field="*{patronymic}" placeholder="Введите отчество">
         </div>
         <div class="form-group">
-            <label for="facultyField">Факультет</label>
+            <label for="facultyField">Специальность</label>
             <input type="text" class="form-control" id="facultyField" th:field="*{faculty}" placeholder="Введите факультет">
         </div>
         <div class="form-group">
