--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -17,7 +17,7 @@
             <td>Фамилия</td>
             <td>Имя</td>
             <td>Отчество</td>
-            <td>Факультет</td>
+            <td>Специальность</td>
         </tr>
         </thead>
         <tbody>
