--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -16,14 +16,15 @@
         <a href="https://bpcollege.ru/life/schedule/">Расписание занятий</a>
         <a href="https://bpcollege.ru/life/call-schedule/">Расписание звонков</a>
     </nav>
-    <div class="my-block">
+    <p class="my-block">
         Белорецкий педагогический колледж является государственным бюджетным профессиональным образовательным учреждением.
         Белорецкий педагогический колледж имеет лицензию Управления по контролю и надзору в сфере образования Республики Башкортостан от «2» октября 2015 г. регистрационный №3273, на право ведения образовательной деятельности по образовательным программам среднего профессионального образования и программам дополнительного образования. Срок действия лицензии бессрочный. Свидетельство о государственной аккредитации от «5» ноября 2015 г., регистрационный №1842. Срок действия по 22 декабря 2017 года.
         Программы подготовки специалистов среднего звена реализуются в соответствии с действующими Федеральными Государственными образовательными стандартами среднего профессионального образования с учетом запросов потенциальных работодателей.
         Официальным языком, на котором ведется образовательный процесс, является русский. Башкирский язык, как государственный язык Республики Башкортостан, изучается в соответствии с законодательством Республики Башкортостан.
         Среди преподавателей колледжа - Почетные работники среднего профессионального образования РФ, Заслуженные учителя РБ, Отличники образования Российской Федерации и Республики Башкортостан.
         Колледж располагает необходимыми зданиями и сооружениями для оказания образовательных услуг среднего профессионального образования. Здания являются республиканской собственностью и находятся в оперативном управлении Колледжа.
-    </div>
+    </p>
 </div>
+
 </body>
 </html>
