--- a/src/main/resources/templates/materials_for_admins.html
+++ b/src/main/resources/templates/materials_for_admins.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Учебные материалы</title>
   <link type="text/css" rel ="stylesheet" th:href="@{css/bootstrap_styles.css}">
+  <style>
+        body {
+            background-color: #c8ffc8;
+        }
+  </style>
 </head>
 <body>
 <div class="container">
