--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -5,6 +5,11 @@
     <title>Студенты</title>
     <!-- <link type="text/css" rel ="stylesheet" th:href="@{css/bootstrap_styles.css}"> -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #c8ffc8;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
