--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Образовательный портал</title>
     <link type="text/css" rel ="stylesheet" th:href="@{css/stylesheet.css}">
+    <style>
+        body {
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
 <div class="bg-img">
