--- a/src/main/resources/templates/home_page1.html
+++ b/src/main/resources/templates/home_page1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Образовательный портал</title>
-    <link type="text/css" rel="stylesheet" th:href="@{css/stylesheet1.css}">
-    <!-- <link type="text/css" rel="stylesheet" href="css/stylesheet.css"> -->
+    <link type="text/css" rel ="stylesheet" th:href="@{css/stylesheet.css}">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <body>
 <div class="bg-img">
@@ -25,5 +25,6 @@
         Колледж располагает необходимыми зданиями и сооружениями для оказания образовательных услуг среднего профессионального образования. Здания являются республиканской собственностью и находятся в оперативном управлении Колледжа.
     </p>
 </div>
+
 </body>
 </html>
