--- a/src/main/resources/templates/add_student1.html
+++ b/src/main/resources/templates/add_student1.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добавить студента</title>
+    <!-- <link type="text/css" rel ="stylesheet" th:href="@{css/bootstrap_styles.css}"> -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -13,39 +13,41 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2 class="text-white">Добавьте нового студента</h2>
+    <h2>Добавьте нового студента</h2>
     <!-- Форма с использованием Thymeleaf -->
     <form th:action="@{/admins_page/student/add}" th:object="${students}" method="post">
         <div class="form-group">
-            <label class="text-white" for="surnameField">Фамилия</label>
+            <label for="surnameField">Фамилия</label>
             <!-- Связывание поля ввода с полем surname в модели данных на сервере -->
             <input type="text" class="form-control" id="surnameField" th:field="*{surname}" placeholder="Введите фамилию">
         </div>
         <div class="form-group">
-            <label class="text-white" for="nameField">Имя</label>
+            <label for="nameField">Имя</label>
             <input type="text" class="form-control" id="nameField" th:field="*{name}" placeholder="Введите имя">
         </div>
         <div class="form-group">
-            <label class="text-white" for="patronymicField">Отчество</label>
+            <label for="patronymicField">Отчество</label>
             <input type="text" class="form-control" id="patronymicField" th:field="*{patronymic}" placeholder="Введите отчество">
         </div>
         <div class="form-group">
-            <label class="text-white" for="facultyField">Специальность</label>
-            <input type="text" class="form-control" id="facultyField" th:field="*{faculty}" placeholder="Введите специальность">
+            <label for="facultyField">Специальность</label>
+            <input type="text" class="form-control" id="facultyField" th:field="*{faculty}" placeholder="Введите факультет">
         </div>
         <div class="form-group">
-            <label class="text-white" for="loginField">Логин</label>
+            <label for="loginField">Логин</label>
             <input type="text" class="form-control" id="loginField" th:field="*{login}" placeholder="Введите логин">
         </div>
         <div class="form-group">
-            <label class="text-white" for="passwordField">Пароль</label>
+            <label for="passwordField">Пароль</label>
             <input type="password" class="form-control" id="passwordField" th:field="*{password}" placeholder="Введите пароль">
         </div>
         <button type="submit" class="btn btn-primary">Отправить</button>
     </form>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
