--- a/src/main/resources/templates/admins_page.html
+++ b/src/main/resources/templates/admins_page.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Образовательный портал</title>
-    <link type="text/css" rel ="stylesheet" th:href="@{css/stylesheet.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{css/stylesheet.css}">
     <style>
         body {
             background-color: blue;
+        }
+        .topnav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            background-color: #333;
+            overflow: hidden;
+        }
+        .topnav a {
+            padding: 14px 20px;
+            display: block;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+        }
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        .title {
+            text-align: center;
+            font-size: 2em;
+            margin-top: 20px;
+        }
+        /* Адаптивные стили для мобильных устройств */
+        @media (max-width: 600px) {
+            .title {
+                font-size: 1.5em;
+            }
+            .topnav {
+                justify-content: center;
+            }
+            .topnav a {
+                padding: 10px;
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
